[tool.black]
line-length = 120

[tool.poetry]
name = "telebot"
version = "0.1.0"
description = "Updated version of SkittBot with some features from skitt_bot to work with latest version of python-telegram-bot. Now has quite a few original features as well."
authors = ["ksdfg <ksdfg123@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
dnspython = "^2.2.1"
emoji = "1.6.1"
mongoengine = "^0.24.2"
Pillow = "^9.2.0"
python-decouple = "^3.6"
python-telegram-bot = "^13.14"
spongemock = "^0.3.4"
zalgo-text = "^0.6"
hentai = "^3.2.10"
telegraph = "^2.1.0"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
