[tool.black]
line-length = 120

[tool.poetry]
name = "telebot"
version = "0.1.0"
description = "Updated version of SkittBot with some features from skitt_bot to work with latest version of python-telegram-bot. Now has quite a few original features as well."
authors = ["ksdfg <ksdfg123@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
dnspython = "^2.2.1"
emoji = "1.6.1"
mongoengine = "^0.27.0"
Pillow = "^10.1.0"
python-decouple = "^3.8"
python-telegram-bot = "13.15"
spongemock = "^1.0.0"
zalgo-text = "^0.6"
hentai = "^3.2.10"
telegraph = "^2.2.0"
pydantic = {extras = ["dotenv"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
